RESOLVED FIXED215146
"DoubleDown Casino" respin button stops working with trackpad
https://bugs.webkit.org/show_bug.cgi?id=215146
Summary "DoubleDown Casino" respin button stops working with trackpad
Devin Rousso
Reported 2020-08-04 16:02:53 PDT
.
Attachments
Patch (3.40 KB, patch)
2020-08-04 16:04 PDT, Devin Rousso
no flags
Devin Rousso
Comment 1 2020-08-04 16:03:15 PDT
Devin Rousso
Comment 2 2020-08-04 16:04:26 PDT
EWS
Comment 3 2020-08-04 16:48:42 PDT
Committed r265269: <https://trac.webkit.org/changeset/265269> All reviewed patches have been landed. Closing bug and clearing flags on attachment 405955 [details].
Note You need to log in before you can comment on or make changes to this bug.