"DoubleDown Casino" respin button stops working with trackpad https://bugs.webkit.org/show_bug.cgi?id=215146 <rdar://problem/64668138>

Reviewed by Tim Horton.

Source/WebCore:

* platform/RuntimeApplicationChecks.h:
* platform/cocoa/RuntimeApplicationChecksCocoa.mm:
(WebCore::IOSApplication::isDoubleDown): Added.

Source/WebKit:

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView shouldUseMouseGestureRecognizer]):


Canonical link: https://commits.webkit.org/227950@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265269 268f45cc-cd09-0410-ab3c-d52691b4dbfc